# student-system

./: .gitignore  COURSE_DELETE_FEATURE.md  Makefile  README.md  create_superuser.py  db_info.py  debug_admin_edit.py  debug_urls.py  edit_button_fix.md  final_solution.md  list_superusers.py  pyproject.toml  requirements.txt  reset_passwords.py  run_claude.bat  setup-uv.bat  show_data.py  simple_test.py  test_edit.html  test_edit_function.py  test_edit_view.py  view_data.py  临时修复方案.md  修复报告.md
.bmad-core/: install-manifest.yaml
.claude/: settings.local.json
courses/: admin.py  forms.py  models.py  urls.py  views.py
courses/migrations/: 0001_initial.py  0002_initial.py  0003_alter_announcement_course_class.py
scripts/: github-setup.bat
student_system/: SETUP-GUIDE.md  activate-env.bat  activate-env.sh  requirements-dev.txt  settings.py
student_system/courses/: models.py  urls.py  views.py
student_system/scripts/: github-setup.sh  setup.bat  setup.sh
student_system/student_system/: urls.py
student_system/templates/: base.html
student_system/templates/admin/: dashboard.html
student_system/templates/courses/: class_detail.html  class_list.html  course_confirm_delete.html  enroll_form.html
student_system/templates/student/: dashboard.html
student_system/templates/users/: create_student_profile.html  edit_student_profile.html  register.html
templates/: base.html
templates/courses/: class_form.html  course_confirm_delete.html  course_detail.html  course_form.html  course_list.html  enrollment_list.html  grade_form.html
templates/student/: dashboard.html
templates/teacher/: dashboard.html
templates/users/: admin_create_user.html  admin_delete_user.html  admin_edit_user.html  admin_profile.html  create_teacher_profile.html  edit_admin_profile.html  edit_student_profile.html  edit_teacher_profile.html  login.html  register.html  student_profile.html  teacher_profile.html  user_detail.html  user_list.html
users/: admin.py  forms.py  models.py  urls.py  views.py
users/migrations/: 0001_initial.py
