[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "student-system"
version = "1.0.0"
description = "Django Student Course Selection System"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = ["django", "education", "course-selection", "student-management"]
authors = [
  {name = "Student System", email = "admin@school.edu"},
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Web Environment",
  "Framework :: Django",
  "Framework :: Django :: 4.2",
  "Intended Audience :: Education",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Topic :: Education",
  "Topic :: Internet :: WWW/HTTP",
  "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
]

dependencies = [
  "Django>=4.2,<5.0",
  "Pillow>=9.0.0",
  "python-decouple>=3.6",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.1.0",
  "black>=22.0.0",
  "pytest>=7.0.0",
  "pytest-django>=4.5.0",
  "django-debug-toolbar>=3.8.0",
  "ipython>=8.0.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/student-system"
Repository = "https://github.com/yourusername/student-system.git"
Issues = "https://github.com/yourusername/student-system/issues"

[project.scripts]
student-system = "student_system.manage:main"

[dependency-groups]
dev = [
  "ruff>=0.1.0",
  "black>=22.0.0",
  "pytest>=7.0.0",
  "pytest-django>=4.5.0",
  "django-debug-toolbar>=3.8.0",
  "ipython>=8.0.0",
  "pre-commit>=3.0.0",
]

[tool.ruff]
line-length = 88
target-version = "py38"

# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

# Same as Black.
indent-style = "space"

# Like Black, respect magic trailing commas.
quote-style = "double"

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
# Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or
# McCabe complexity (`C901`) by default.
select = [
  # pycodestyle
  "E",
  # Pyflakes
  "F",
  # pyupgrade
  "UP",
  # flake8-bugbear
  "B",
  # flake8-simplify
  "SIM",
  # isort
  "I",
  # django
  "DJ",
  # numpy
  "NPY",
]

ignore = [
  # Star imports are allowed in Django
  "F405",
  "F403",
  # Line too long - we trust our formatter
  "E501",
  # Django's lazy loading
  "DJ001",
  "DJ007",
]

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?(_+|__+))$"

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

[tool.ruff.lint.isort]
known-first-party = ["student_system", "users", "courses"]

[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "student_system.settings"
python_files = ["tests.py", "test_*.py", "*_tests.py"]
addopts = "--tb=short --strict-markers --disable-warnings"
testpaths = ["tests"]
markers = [
  "slow: marks tests as slow (deselect with '-m \"not slow\"')",
  "integration: marks tests as integration tests",
]

[tool.coverage.run]
source = ["."]
omit = [
  "*/migrations/*",
  "*/venv/*",
  "*/env/*",
  "*/tests/*",
  "manage.py",
]

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "def __repr__",
  "raise AssertionError",
  "raise NotImplementedError",
  "if __name__ == .__main__.:",
]